objects/Email_To_Case_Override_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting used for killing or forwarding an email to user&apos;s previous email address on Email To Case Override</description>
    <fields>
        <fullName>Allow_Email_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows capturing of email details on Email Logs custom object</description>
        <label>Allow Email Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forward_Change_Email_Request_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables forwarding of Change Email Request to a specified email address on this custom setting</description>
        <label>Forward Change Email Request Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forwarding_Email_Address__c</fullName>
        <description>Forwarding Email Address when the Enable Change Email Request Email is activated.</description>
        <label>Forwarding Email Address</label>
        <type>Email</type>
    </fields>
    <label>Email To Case Override Setting</label>
</CustomObject>